// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCharacterCoordsToDatabase 1`] = `
Object {
  "beachWaldo": Object {
    "x": 1286,
    "y": 1637,
  },
  "birdPerson": Object {
    "x": 1435,
    "y": 687,
  },
  "dog": Object {
    "x": 2153,
    "y": 576,
  },
  "mazeWaldo": Object {
    "x": 1377,
    "y": 653,
  },
  "monster": Object {
    "x": 2798,
    "y": 224,
  },
  "ouch": Object {
    "x": 2313,
    "y": 1087,
  },
  "shovelBoy": Object {
    "x": 2725,
    "y": 1090,
  },
  "snowWaldo": Object {
    "x": 2561,
    "y": 1419,
  },
  "yellowHairPerson": Object {
    "x": 1929,
    "y": 209,
  },
}
`;

exports[`addCharacterCoordsToDatabase 2`] = `
Object {
  "beachWaldo": Object {
    "x": 0,
    "y": 0,
  },
  "birdPerson": Object {
    "x": 0,
    "y": 0,
  },
  "dog": Object {
    "x": 0,
    "y": 0,
  },
  "mazeWaldo": Object {
    "x": 0,
    "y": 0,
  },
  "monster": Object {
    "x": 0,
    "y": 0,
  },
  "ouch": Object {
    "x": 0,
    "y": 0,
  },
  "shovelBoy": Object {
    "x": 0,
    "y": 0,
  },
  "snowWaldo": Object {
    "x": 0,
    "y": 0,
  },
  "yellowHairPerson": Object {
    "x": 0,
    "y": 0,
  },
}
`;
